--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ openai = "^1.35.12"
 tenacity = "^8.5.0"
 python-dotenv = "^1.0.1"
 tqdm = "^4.66.4"
+sentence-transformers = "^3.0.1"
+ipykernel = "^6.29.5"
+pandas = "^2.2.2"
+matplotlib = "^3.9.1"
 
 [build-system]
 requires = ["poetry-core"]
