--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sentence-transformers = "^3.0.1"
 ipykernel = "^6.29.5"
 pandas = "^2.2.2"
 matplotlib = "^3.9.1"
+nltk = "^3.8.1"
 
 [build-system]
 requires = ["poetry-core"]
