--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ ipykernel = "^6.29.5"
 pandas = "^2.2.2"
 matplotlib = "^3.9.1"
 nltk = "^3.8.1"
+pytest = "^8.2.2"
 
 [build-system]
 requires = ["poetry-core"]
